# tiger-option

./: .env.example  .gitignore  DEBUG_SETUP.md  DELTA_MANAGER_README.md  HOMEPAGE_UPDATE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  WEBHOOK_COMPATIBILITY_SUMMARY.md  WEBHOOK_PAYLOAD_TYPES.md  account_chu_test_report.md  demo_delta_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_account_chu.py  test_all_apis.py  test_delta_manager_api.py  test_deribit_webhook.py  test_enhanced_pipeline.py  test_homepage.py  test_mock_client.py  test_server.py  test_simple_webhook.py  test_single_trade.py  test_trading_execution.py  test_webhook.json  test_webhook.py  需求.md
config/: apikeys.example.yml  demo_private_key.pem
public/: delta-manager.html  index.html
src/: __init__.py  main.py
src/api/: __init__.py  account_routes.py  market_routes.py  routes.py  trading_routes.py  webhook_routes.py
src/config/: __init__.py  apikeys.py  settings.py
src/database/: __init__.py
src/middleware/: __init__.py  account_validation.py  error_handler.py
src/models/: __init__.py  common.py  database.py  tiger.py  webhook.py
src/services/: __init__.py  auth_service.py  enhanced_signal_processor.py  mock_tiger_client.py  option_selector.py  order_strategy.py  position_manager.py  risk_manager.py  signal_processor.py  signal_validator.py  tiger_client.py  tiger_client_factory.py
